# rust_music_player

./: Cargo.toml  README.md  playlist.txt
src/: commander.rs  download.rs  main.rs  music.rs  playlist.rs  process.rs  yt_dlp.rs  yt_search.rs
